<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeeperAndroid</string>

    <string name="app_name_compose">DeeperCompose</string>
    <string name="app_name_flutter">DeeperFlutter</string>
    <string name="app_name_jetpack">DeeperJetpack</string>
    <string name="app_name_graphics">DeeperGraphics</string>
    <string name="app_name_ndk">DeeperNDK</string>
    <string name="app_name_login">DeeperLogin</string>

    <string name="jetpack">Jetpack</string>
    <string name="graphics">Graphics</string>
    <string name="ndk">NDK</string>
    <string name="flutter">Flutter</string>
    <string name="compose">Compose</string>

    <string name="label_fragment_deep">I am a DeepFragment</string>
    <string name="label_fragment_content">I am a ContentFragment</string>
    <string name="label_fragment_nav">I am a NavFragment</string>

    <string name="back">back</string>
</resources>
